fixed blurb content spacing

--- a/css/_page-home.scss
+++ b/css/_page-home.scss
@@ -24,6 +24,10 @@
     padding-top: $xl;
     .grid-content {
         text-align: center;
+        p {
+            width: 60%;
+            margin: auto;
+        }
     }
     .blurb-container {
         gap: $md;
